--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juliana</title>
-</head>
-<body>
-    <h1>JULIANA DO CARMO</h1>
-    <p>Uberlândia/MG</p>
-    
+    <title>Portifólio de Juliana do Carmo</title>
+</head>   
+<body>   
+    <h2>Índice</h2>
+<ol>
+    <li><a href="#about-me">Sobre mim</a></li>
+    <li><a href="#hard-skills">Habilidades</a></li>
+    <li><a href="#blogs">Blogs que Recomendo</a></li>
+</ol>
+  <h3>JULIANA DO CARMO MARTINS FERREIRA</h1>
+    <img id="picture" src="https://bit.ly/2CCmhRO" alt="Juliana's picture" width="300px">
+    <h3 id="about-me">Sobre mim</h3>
+     <p>
+        <strong><em>Full Stack Developer</em></strong> student at TRYBE<br>
+        Sou natural de Brasília/DF e moro no Triângulo Mineiro na cidade de <strong><em></em>Uberlândia/MG.</em></strong> 
+     </p>
+     <h3 id="hard-skills">Habilidades/Hard Skills</h3>
+     <ul>
+         <li>Utilizar o bash</li>
+         <li>Programar scripts em Shell</li>
+         <li>Utilizar Git e GitHub</li>
+         <li>HTML</li>
+     </ul>
+     <a href="#picture">Minha Imagem</a>
+
+     <h3 id="blogs">Blogs</h3>
+     <ul>
+     <li><a target="_blank" href="https://blog.betrybe.com/">Blog da Trybe</a></li>
+     <li><a target="_blank" href="https://filipedeschamps.com.br/">Filipe Deschamps</a></li>
+     <li><a target="_blank" href="https://blog.rocketseat.com.br/">Blog da Rocketseat</a></li>
+    </ul>
 </body>
 </html>
